--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <div class="divider"></div>
         <div class="canvas-container">
             <h1>그림을 그려보세요.</h1>
-            <canvas id="canvas" width="400" height="500"></canvas>
+            <canvas id="canvas" ></canvas>
             <div class="button-container">
                 <button id="refreshButton">새로고침</button>
             </div>
@@ -284,56 +284,59 @@
 
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
-
         let painting = false;
 
-// 기존의 mouse event 핸들러는 유지
-
-function startPainting(e) {
-    painting = true;
-    draw(e);
-}
-
-function stopPainting() {
-    painting = false;
-    ctx.beginPath();
-}
-
-function handleMouseMove(e) {
-    if (!painting) return;
-    const rect = canvas.getBoundingClientRect();
-    let x, y;
-
-    if (e.type === 'touchmove') {
-        x = e.touches[0].clientX - rect.left;
-        y = e.touches[0].clientY - rect.top;
-    } else {
-        x = e.clientX - rect.left;
-        y = e.clientY - rect.top;
-    }
-
-    ctx.lineTo(x, y);
-    ctx.stroke();
-    ctx.beginPath();
-    ctx.moveTo(x, y);
-}
-
-canvas.addEventListener('mousedown', startPainting);
-canvas.addEventListener('mouseup', stopPainting);
-canvas.addEventListener('mouseleave', stopPainting);
-canvas.addEventListener('mousemove', handleMouseMove);
-
-function clearCanvas() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
+        function resizeCanvas() {
+            canvas.width = window.innerWidth * 0.5;
+            canvas.height = window.innerHeight * 0.5;
+        }
+        window.addEventListener('resize', resizeCanvas);
+        resizeCanvas();
+        function startPainting(e) {
+            painting = true;
+            draw(e);
         }
 
-        
-// 터치 이벤트 핸들러 추가
-canvas.addEventListener('touchstart', startPainting);
-canvas.addEventListener('touchend', stopPainting);
-canvas.addEventListener('touchcancel', stopPainting);
-canvas.addEventListener('touchmove', handleMouseMove);
-document.getElementById('refreshButton').addEventListener('click', clearCanvas);
+        function stopPainting() {
+            painting = false;
+            ctx.beginPath();
+        }
+
+        function handleMouseMove(e) {
+            if (!painting) return;
+            const rect = canvas.getBoundingClientRect();
+            let x, y;
+
+            if (e.type === 'touchmove') {
+                x = e.touches[0].clientX - rect.left;
+                y = e.touches[0].clientY - rect.top;
+            } else {
+                x = e.clientX - rect.left;
+                y = e.clientY - rect.top;
+            }
+
+            ctx.lineTo(x, y);
+            ctx.stroke();
+            ctx.beginPath();
+            ctx.moveTo(x, y);
+        }
+
+        canvas.addEventListener('mousedown', startPainting);
+        canvas.addEventListener('mouseup', stopPainting);
+        canvas.addEventListener('mouseleave', stopPainting);
+        canvas.addEventListener('mousemove', handleMouseMove);
+
+        function clearCanvas() {
+                    ctx.clearRect(0, 0, canvas.width, canvas.height);
+                }
+
+
+        // 터치 이벤트 핸들러 추가
+        canvas.addEventListener('touchstart', startPainting);
+        canvas.addEventListener('touchend', stopPainting);
+        canvas.addEventListener('touchcancel', stopPainting);
+        canvas.addEventListener('touchmove', handleMouseMove);
+        document.getElementById('refreshButton').addEventListener('click', clearCanvas);
 
     </script>
 </body>
