--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>놀이터</title>
+
     <style>
         body {
             background-color: rgb(228, 228, 197); 
@@ -34,7 +35,7 @@
         .animate-text {
             animation: textExpand 2s forwards; 
         }
-        .container {
+        .fortune-container {
         position: relative;
         text-align: center;
         margin-top: 20px;
@@ -160,20 +161,22 @@
             </div>
         </div>
     </nav>
+
     <div id="floatingWindow" class="bg-light p-4" style="display: none; position: fixed; bottom: 0; left: 0; right: 0; z-index: 999;">
         <button id="closeButton" class="btn btn-danger float-right">닫기</button>
         <div id="content"></div>
     </div>
+
     <div class="center">
-        <h1>포춘쿠키를 눌러주세요</h1>
-        <div class="container">
+         <h1>포춘쿠키를 눌러주세요</h1>
+        <div class="fortune-container">
             <img id="fortuneImage" src="포춘1.jpg" alt="운세 이미지" style="cursor: pointer;">
             <div id="fortune"></div>
             <button id="resetButton">한 개 더 줘!</button>
         </div>
         <div class="divider"></div>
-        <div class="container">
-        <h1>심리테스트를 해보세요.</h1>
+      
+        <h1>심리테스트를 해보세요.</h1>
         <h8>좋아하는 동물을 선택하세요.</h8>
         <div class="card-container" id="A">
             <div class="card">
@@ -200,6 +203,7 @@
             </div>
         </div>
     <div class="divider"></div>
+
         <div class="canvas-container">
             <h1>그림을 그려보세요.</h1>
             <canvas id="canvas" ></canvas>
@@ -207,11 +211,14 @@
                 <button id="refreshButton">새로고침</button>
             </div>
         </div>
+    <div class="divider"></div>
+      
+    <h1> 다음엔 뭐가 추가될까요?</h>
     </div>
+  
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
     <script>
         var fortunes = [
@@ -333,8 +340,6 @@
                     ctx.clearRect(0, 0, canvas.width, canvas.height);
                 }
 
-
-        // 터치 이벤트 핸들러 추가
         canvas.addEventListener('touchstart', startPainting);
         canvas.addEventListener('touchend', stopPainting);
         canvas.addEventListener('touchcancel', stopPainting);
