--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>놀이터</title>
-
     <style>
         body {
             background-color: rgb(228, 228, 197); 
+            justify-content: center;
+            align-items: center;
         }
         h1 {
             margin-top: 20px; 
@@ -138,7 +139,19 @@
                 width: 30%;
             }
         }    
+        .date-picker {
+            text-align: center;
+        }
     </style>
+    <script>
+        function showDate() {
+            var year = document.getElementById("year").value;
+            var month = document.getElementById("month").value;
+            var day = document.getElementById("day").value;
+            var resultText = "선택한 날짜: " + year + "년 " + month + "월 " + day + "일";
+            document.getElementById("result").innerText = resultText;
+        }
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -176,7 +189,8 @@
         </div>
         <div class="divider"></div>
       
-        <h1>심리테스트를 해보세요.</h1>
+        <h1>심리테스트를 해보세요.</h1>
+
         <h8>좋아하는 동물을 선택하세요.</h8>
         <div class="card-container" id="A">
             <div class="card">
@@ -212,10 +226,48 @@
             </div>
         </div>
     <div class="divider"></div>
-      
-    <h1> 다음에 추가될 게임은?</h>
     </div>
-  
+
+
+    <div class="date-picker">
+        <h1>생년월일을 입력하세요.</h1>
+        <label for="year">연도:</label>
+        <select id="year">
+            <option value="" disabled selected>연도 선택</option>
+            <!-- 1900년부터 2023년까지 옵션 생성 -->
+            <script>
+                for (var i = 1900; i <= 2023; i++) {
+                    document.write('<option value="' + i + '">' + i + '</option>');
+                }
+            </script>
+        </select>
+
+        <label for="month">월:</label>
+        <select id="month">
+            <option value="" disabled selected>월 선택</option>
+            <!-- 1월부터 12월까지 옵션 생성 -->
+            <script>
+                for (var i = 1; i <= 12; i++) {
+                    document.write('<option value="' + i + '">' + i + '</option>');
+                }
+            </script>
+        </select>
+
+        <label for="day">일:</label>
+        <select id="day">
+            <option value="" disabled selected>일 선택</option>
+            <!-- 1일부터 31일까지 옵션 생성 -->
+            <script>
+                for (var i = 1; i <= 31; i++) {
+                    document.write('<option value="' + i + '">' + i + '</option>');
+                }
+            </script>
+        </select>
+
+        <button onclick="showDate()">입력</button>
+        <p id="result"></p>
+    </div>
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -360,6 +412,8 @@
         ctx.moveTo(x, y);
     }
     canvas.addEventListener('touchmove', handleTouchMove, { passive: false });
+
+
     </script>
 </body>
 </html>
