--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <style>
         body {
             background-color: rgb(228, 228, 197); 
-            justify-content: center;
-            align-items: center;
         }
         h1 {
             margin-top: 20px; 
@@ -22,13 +20,13 @@
             width: 50%;
         }
         .hidden {
-        display: none;
+            display: none;
         }
         .navbar-custom .navbar-nav .nav-link {
-          color: black;
+            color: black;
         }
         .navbar-custom .navbar-brand {
-        color: black;
+            color: black;
         }
         .navbar-custom .navbar-toggler-icon {
             background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
@@ -37,32 +35,30 @@
             animation: textExpand 2s forwards; 
         }
         .fortune-container {
-        position: relative;
-        text-align: center;
-        margin-top: 20px;
+            position: relative;
+            margin-top: 20px;
         }
         #fortuneImage {
-        max-width: 100%; 
-        height: auto; 
-        margin: auto; 
-        display: block; 
-        transition: transform 0.3s ease;
+            max-width: 100%; 
+            height: auto; 
+            margin: auto; 
+            display: block; 
+            transition: transform 0.3s ease;         
         }
         #fortuneImage:hover {
             transform: scale(1.05); 
         }
         #fortune {
-        display: none;
-        color: black;
-        font-size: 10px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: black;
-        text-align: center;
-        background-color: white;
-        width: 85%;
+            display: none;
+            color: black;
+            font-size: 10px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: black;
+            background-color: white;
+            width: 85%;
         }
         @keyframes textExpand {
             from {
@@ -88,7 +84,6 @@
             border: 1px solid #ddd;
             margin: auto;
             width: 70%;
-            text-align: center;
             font-size: 12px;
             height: 50px;
             transform-style: preserve-3d;
@@ -103,8 +98,10 @@
             padding: 10px;
         }
         .card-front {
+            font-size: 15px;
         }
         .card-back {
+            font-size: 12px;
             transform: rotateY(180deg);
         }
         .card.flipped {
@@ -113,8 +110,6 @@
         .canvas-container {
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
         }
         #canvas {
             border: 5px solid rgb(80, 84, 4);
@@ -122,7 +117,6 @@
             cursor: pointer;
         }
         .button-container {
-            text-align: center; 
             margin-top: 10px;
         }
         .divider {
@@ -140,7 +134,6 @@
             }
         }    
         .date-picker {
-            text-align: center;
         }
     </style>
     <script>
@@ -153,7 +146,9 @@
         }
     </script>
 </head>
+
 <body>
+<div class="center">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">오늘</a>
@@ -180,23 +175,21 @@
         <div id="content"></div>
     </div>
 
-        <div class="date-picker">
+    <div class="date-picker">
         <h1>생년월일을 입력하세요.</h1>
         <label for="year">연도:</label>
         <select id="year">
             <option value="" disabled selected>연도 선택</option>
-            <!-- 1900년부터 2023년까지 옵션 생성 -->
             <script>
-                for (var i = 1900; i <= 2023; i++) {
+                for (var i = 2023; i >= 1900; i--) {
                     document.write('<option value="' + i + '">' + i + '</option>');
                 }
             </script>
-        </select>
+        </select>        
 
         <label for="month">월:</label>
         <select id="month">
             <option value="" disabled selected>월 선택</option>
-            <!-- 1월부터 12월까지 옵션 생성 -->
             <script>
                 for (var i = 1; i <= 12; i++) {
                     document.write('<option value="' + i + '">' + i + '</option>');
@@ -207,7 +200,6 @@
         <label for="day">일:</label>
         <select id="day">
             <option value="" disabled selected>일 선택</option>
-            <!-- 1일부터 31일까지 옵션 생성 -->
             <script>
                 for (var i = 1; i <= 31; i++) {
                     document.write('<option value="' + i + '">' + i + '</option>');
@@ -217,185 +209,179 @@
 
         <button onclick="showDate()">입력</button>
         <p id="result"></p>
-
-    <div class="center">
-         <h1>포춘쿠키를 눌러주세요</h1>
-        <div class="fortune-container">
-            <img id="fortuneImage" src="포춘1.jpg" alt="운세 이미지" style="cursor: pointer;">
-            <div id="fortune"></div>
-            <button id="resetButton">한 개 더 줘!</button>
-        </div>
-        <div class="divider"></div>
-      
-        <h1>심리테스트를 해보세요.</h1>
-
-        <h8>좋아하는 동물을 선택하세요.</h8>
-        <div class="card-container" id="A">
-            <div class="card">
-                <div class="card-front">강아지</div>
-                <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
-            </div>
-        </div>
-        <div class="card-container" id="B">
-            <div class="card">
-                <div class="card-front">고양이</div>
-                <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
-            </div>
-        </div>
-        <div class="card-container" id="C">
-            <div class="card">
-                <div class="card-front">사자</div>
-                <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
-            </div>
-        </div>
-        <div class="card-container" id="D">
-            <div class="card">
-                <div class="card-front">개구리</div>
-                <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
-            </div>
-        </div>
-    <div class="divider"></div>
-
-        <div class="canvas-container">
-            <h1>그림을 그려보세요.</h1>
-            <canvas id="canvas" ></canvas>
-            <div class="button-container">
-                <button id="refreshButton">새로고침</button>
-            </div>
-        </div>
-    <div class="divider"></div>
     </div>
+    <div class="fortune-container">
+        <h1>포춘쿠키를 눌러주세요</h1>
+        <img id="fortuneImage" src="포춘1.jpg" alt="운세 이미지" style="cursor: pointer;">
+        <div id="fortune"></div>
+        <button id="resetButton">한 개 더 줘!</button>
+    </div>
+    <div class="divider"></div>
+    <h1>심리테스트를 해보세요.</h1>
+    <h8>좋아하는 동물을 선택하세요.</h8>
+    <div class="card-container" id="A">
+        <div class="card">
+            <div class="card-front">강아지</div>
+            <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
+        </div>
+    </div>
+    <div class="card-container" id="B">
+        <div class="card">
+            <div class="card-front">고양이</div>
+            <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
+        </div>
+    </div>
+    <div class="card-container" id="C">
+        <div class="card">
+            <div class="card-front">사자</div>
+            <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
+        </div>
+    </div>
+    <div class="card-container" id="D">
+        <div class="card">
+            <div class="card-front">개구리</div>
+            <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
+        </div>
+    </div>
+    <div class="divider"></div>
+    <div class="canvas-container">
+        <h1>그림을 그려보세요.</h1>
+        <canvas id="canvas" ></canvas>
+        <div class="button-container">
+            <button id="refreshButton">새로고침</button>
+        </div>
+    </div>
+    <div class="divider"></div>
 </div>
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
-    crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
-    <script>
-        var fortunes = [
-        "오늘 식사가 아주 맛있겠군요.",
-        "오늘 반가운 사람을 만나게 됩니다.",
-        "조금만 더 노력하면 원하는 것을 얻을 수 있습니다.",
-        "오늘은 재물운이 가득한 날입니다.",
-        "돌다리도 두드려 보고 건너는 게 좋아요.",
-        "가까운 사람에게 따뜻한 말을 건네보세요.",
-        "평소 하고 싶었던 일, 오늘 해보세요.",
-        "활짝 웃으면 오늘 매우 좋은 일이 생길 거예요.",
-        "남의 허물을 감싸주면 복 받을 거예요.",
-        "오늘 아주 재미있는 이야기를 듣게 될 겁니다.",
-        "소소한 일에서 기쁨을 찾아보세요.",
-        "오랫동안 만나지 못한 사람에게 연락을 해보세요.",
-        "평소에 가던 길이 아닌, 다른 길로 돌아가보세요.",
-        "당연한 것에도 감사하는 마음을 가져보세요.",
-        "옆사람을 칭찬해주세요. 작은 행운이 생깁니다."
-        ];
-        var images = ['포춘1.jpg', '포춘2.jpg'];
-        var currentImage = 0;
-        var fortuneText = document.getElementById('fortune');
-        var resetButton = document.getElementById('resetButton');
-        var fortuneImage = document.getElementById('fortuneImage');
-        var isFortuneShown = false;
-        fortuneImage.onclick = function() {
-            if (!isFortuneShown) {
-                currentImage = (currentImage + 1) % images.length;
-                this.src = images[currentImage];
-                this.classList.add('no-hover'); // 확대/커서 변경 없는 클래스 추가
-                var randomIndex = Math.floor(Math.random() * fortunes.length);
-                fortuneText.innerText = fortunes[randomIndex];
-                fortuneText.classList.add('animate-text'); // 애니메이션 클래스 추가
-                fortuneText.style.display = 'block';
-                resetButton.style.display;
-                isFortuneShown = true;
-            }
-        };
-        resetButton.onclick = function() {
-            currentImage = 0;
-            fortuneImage.src = '포춘1.jpg';
-            fortuneImage.classList.remove('no-hover');
-            fortuneText.style.display = 'none';
-            fortuneText.classList.remove('animate-text'); // 애니메이션 클래스 제거
-            resetButton.style.display;
-            isFortuneShown = false;
-        };
-        const floatingWindow = document.getElementById('floatingWindow');
-        const content = document.getElementById('content');
-        const closeButton = document.getElementById('closeButton');
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
+crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+crossorigin="anonymous"></script>
+<script>
+    const floatingWindow = document.getElementById('floatingWindow');
+    const content = document.getElementById('content');
+    const closeButton = document.getElementById('closeButton');
 
-        document.querySelectorAll('.nav-link').forEach((link) => {
-            link.addEventListener('click', (e) => {
-                e.preventDefault();
-                content.innerHTML = '';
-                content.innerHTML = `<iframe src="${e.target.getAttribute('href')}" width="100%" height="400px"></iframe>`;
-                floatingWindow.style.display = 'block';
-            });
-        });
-        closeButton.addEventListener('click', () => {
+    document.querySelectorAll('.nav-link').forEach((link) => {
+        link.addEventListener('click', (e) => {
+            e.preventDefault();
             content.innerHTML = '';
-            floatingWindow.style.display = 'none';
+            content.innerHTML = `<iframe src="${e.target.getAttribute('href')}" width="100%" height="400px"></iframe>`;
+            floatingWindow.style.display = 'block';
         });
+    });
+    closeButton.addEventListener('click', () => {
+        content.innerHTML = '';
+        floatingWindow.style.display = 'none';
+    });
 
-        function toggleInterpretation(choice) {
-            var cardElement = document.getElementById(choice).querySelector('.card');
-            cardElement.classList.toggle('flipped');
+    var fortunes = [
+    "오늘 식사가 아주 맛있겠군요.",
+    "오늘 반가운 사람을 만나게 됩니다.",
+    "조금만 더 노력하면 원하는 것을 얻을 수 있습니다.",
+    "오늘은 재물운이 가득한 날입니다.",
+    "돌다리도 두드려 보고 건너는 게 좋아요.",
+    "가까운 사람에게 따뜻한 말을 건네보세요.",
+    "평소 하고 싶었던 일, 오늘 해보세요.",
+    "활짝 웃으면 오늘 매우 좋은 일이 생길 거예요.",
+    "남의 허물을 감싸주면 복 받을 거예요.",
+    "오늘 아주 재미있는 이야기를 듣게 될 겁니다.",
+    "소소한 일에서 기쁨을 찾아보세요.",
+    "오랫동안 만나지 못한 사람에게 연락을 해보세요.",
+    "평소에 가던 길이 아닌, 다른 길로 돌아가보세요.",
+    "당연한 것에도 감사하는 마음을 가져보세요.",
+    "옆사람을 칭찬해주세요. 작은 행운이 생깁니다."
+    ];
+
+    var images = ['포춘1.jpg', '포춘2.jpg'];
+    var currentImage = 0;
+    var fortuneText = document.getElementById('fortune');
+    var resetButton = document.getElementById('resetButton');
+    var fortuneImage = document.getElementById('fortuneImage');
+    var isFortuneShown = false;
+    fortuneImage.onclick = function() {
+        if (!isFortuneShown) {
+            currentImage = (currentImage + 1) % images.length;
+            this.src = images[currentImage];
+            this.classList.add('no-hover'); // 확대/커서 변경 없는 클래스 추가
+            var randomIndex = Math.floor(Math.random() * fortunes.length);
+            fortuneText.innerText = fortunes[randomIndex];
+            fortuneText.classList.add('animate-text'); // 애니메이션 클래스 추가
+            fortuneText.style.display = 'block';
+            resetButton.style.display;
+            isFortuneShown = true;
         }
-        document.getElementById("A").onclick = function() { toggleInterpretation("A"); };
-        document.getElementById("B").onclick = function() { toggleInterpretation("B"); };
-        document.getElementById("C").onclick = function() { toggleInterpretation("C"); };
-        document.getElementById("D").onclick = function() { toggleInterpretation("D"); };
+    };
+    resetButton.onclick = function() {
+        currentImage = 0;
+        fortuneImage.src = '포춘1.jpg';
+        fortuneImage.classList.remove('no-hover');
+        fortuneText.style.display = 'none';
+        fortuneText.classList.remove('animate-text'); // 애니메이션 클래스 제거
+        resetButton.style.display;
+        isFortuneShown = false;
+    };
+    function toggleInterpretation(choice) {
+        var cardElement = document.getElementById(choice).querySelector('.card');
+        cardElement.classList.toggle('flipped');
+    }
+    document.getElementById("A").onclick = function() { toggleInterpretation("A"); };
+    document.getElementById("B").onclick = function() { toggleInterpretation("B"); };
+    document.getElementById("C").onclick = function() { toggleInterpretation("C"); };
+    document.getElementById("D").onclick = function() { toggleInterpretation("D"); };
 
-        const canvas = document.getElementById('canvas');
-        const ctx = canvas.getContext('2d');
-        let painting = false;
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+    let painting = false;
+    function resizeCanvas() {
+        canvas.width = window.innerWidth * 0.5;
+        canvas.height = window.innerHeight * 0.5;
+    }
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+    function startPainting(e) {
+        painting = true;
+        draw(e);
+    }
 
-        function resizeCanvas() {
-            canvas.width = window.innerWidth * 0.5;
-            canvas.height = window.innerHeight * 0.5;
+    function stopPainting() {
+        painting = false;
+        ctx.beginPath();
+    }
+
+    function handleMouseMove(e) {
+        if (!painting) return;
+        const rect = canvas.getBoundingClientRect();
+        let x, y;
+
+        if (e.type === 'touchmove') {
+            x = e.touches[0].clientX - rect.left;
+            y = e.touches[0].clientY - rect.top;
+        } else {
+            x = e.clientX - rect.left;
+            y = e.clientY - rect.top;
         }
-        window.addEventListener('resize', resizeCanvas);
-        resizeCanvas();
-        function startPainting(e) {
-            painting = true;
-            draw(e);
-        }
+        ctx.lineTo(x, y);
+        ctx.stroke();
+        ctx.beginPath();
+        ctx.moveTo(x, y);
+    }
 
-        function stopPainting() {
-            painting = false;
-            ctx.beginPath();
-        }
+    canvas.addEventListener('mousedown', startPainting);
+    canvas.addEventListener('mouseup', stopPainting);
+    canvas.addEventListener('mouseleave', stopPainting);
+    canvas.addEventListener('mousemove', handleMouseMove);
 
-        function handleMouseMove(e) {
-            if (!painting) return;
-            const rect = canvas.getBoundingClientRect();
-            let x, y;
-
-            if (e.type === 'touchmove') {
-                x = e.touches[0].clientX - rect.left;
-                y = e.touches[0].clientY - rect.top;
-            } else {
-                x = e.clientX - rect.left;
-                y = e.clientY - rect.top;
+    function clearCanvas() {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
             }
 
-            ctx.lineTo(x, y);
-            ctx.stroke();
-            ctx.beginPath();
-            ctx.moveTo(x, y);
-        }
-
-        canvas.addEventListener('mousedown', startPainting);
-        canvas.addEventListener('mouseup', stopPainting);
-        canvas.addEventListener('mouseleave', stopPainting);
-        canvas.addEventListener('mousemove', handleMouseMove);
-
-        function clearCanvas() {
-                    ctx.clearRect(0, 0, canvas.width, canvas.height);
-                }
-
-        canvas.addEventListener('touchstart', startPainting);
-        canvas.addEventListener('touchend', stopPainting);
-        canvas.addEventListener('touchcancel', stopPainting);
-        canvas.addEventListener('touchmove', handleMouseMove);
-        document.getElementById('refreshButton').addEventListener('click', clearCanvas);
+    canvas.addEventListener('touchstart', startPainting);
+    canvas.addEventListener('touchend', stopPainting);
+    canvas.addEventListener('touchcancel', stopPainting);
+    canvas.addEventListener('touchmove', handleMouseMove);
+    document.getElementById('refreshButton').addEventListener('click', clearCanvas);
 
     function handleTouchMove(e) {
         e.preventDefault(); // 스크롤 방지
@@ -411,8 +397,6 @@
         ctx.moveTo(x, y);
     }
     canvas.addEventListener('touchmove', handleTouchMove, { passive: false });
-
-
-    </script>
+</script>
 </body>
 </html>
